Changelog
=========

1.0.2 - Unreleased
------------------

1.0.1 - 2010-09-28
------------------

- Add empty profile for 4.0-4.0.1 upgrade.
  [esteele]

- Avoid relying on the ``Control_Panel/Products`` section, as it is no longer
  used. This closes http://dev.plone.org/plone/ticket/10824.
  [hannosch]

1.0 - 2010-08-28
----------------

- Add empty profile for rc1-final upgrade.
  [esteele]

1.0rc1 - 2010-08-05
-------------------

- Update personal preferences action to its new URL.
  [davisagli]

- Added `padding-left` to the safe_html style whitelist. This refs
  http://dev.plone.org/plone/ticket/10557.
  [hannosch]

- Update license to GPL version 2 only.
  [hannosch]

1.0b5 - 2010-07-07
------------------

- Added upgrade step to remove the ``sunburst_js`` skin layer.
  [hannosch]

- Upgrade step for removing IE8.js from Sunburst.
  [spliter]

- Merged the ``recompilePythonScripts`` upgrade step with the unified folder
  upgrade step. This avoids an extra complete traversal of the entire site.
  [hannosch]

- Rewrote the ``updateIconMetadata`` upgrade step for speed.
  [hannosch]

- Moved the code to remove old persistent Interface records into the
  recompilePythonScripts step. This step actually covers all objects.
  [hannosch]

- Optimized the ``optimizeDateRangeIndexes`` upgrade step to take advantage of
  knowledge about index internals instead of a brute force reindexIndex call.
  [hannosch]

- Optimized the "update getIcon metadata" upgrade step and added a progress
  handler to it.
  [hannosch]

- Enhance the unregisterOldSteps upgrade step, by removing all persistent
  steps for which a ZCML steps exists.
  [hannosch]

- Take a savepoint before starting the unified folder upgrade. This lets us
  fail fast if there's problems pickling anything.
  [hannosch]

- Also catch TypeError's in the action icons upgrade.
  [hannosch]

- Added optional CacheFu uninstallation step. This will remove CacheFu tools
  if they are detected to be broken.